--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@sanity/client": "^7.14.1",
+    "@sanity/image-url": "^2.0.3",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.83.0",
     "@tiptap/core": "^3.15.3",
@@ -56,11 +58,13 @@
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
     "caniuse-lite": "^1.0.30001768",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "groq": "^5.9.0",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.3",
@@ -68,6 +72,7 @@
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
