--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sanity/client": "^7.14.1",
     "@sanity/image-url": "^2.0.3",
+    "@supabase/storage-js": "^2.95.3",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.83.0",
     "@tiptap/core": "^3.15.3",
