--- a/studio/package.json
+++ b/studio/package.json
@@ -7,7 +7,9 @@
         "start": "sanity start",
         "build": "sanity build",
         "deploy": "sanity deploy",
-        "deploy-graphql": "sanity graphql deploy"
+        "deploy-graphql": "sanity graphql deploy",
+        "sanity": "sanity dev",
+        "sanity:deploy": "sanity deploy"
     },
     "keywords": [
         "sanity",
