--- a/studio/package.json
+++ b/studio/package.json
@@ -20,6 +20,7 @@
         "@sanity/icons": "^3.0.0",
         "@sanity/ui": "^3.0.0",
         "@sanity/vision": "^4.22.0",
+        "lucide-react": "^0.575.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-is": "^18.3.1",
